--- a/standard/main_personal.yaml
+++ b/standard/main_personal.yaml
@@ -1,5 +1,30 @@
 interoperability_version: 1.4
 oid_version: 1.4
+oid_mapping:
+  - 2.16.360.1.1.1.5.1.1.1: Individu non-Instansi Offline Level 1
+  - 2.16.360.1.1.1.5.1.1.2: Individu non-Instansi Offline Level 2
+  - 2.16.360.1.1.1.5.1.1.3: Individu non-Instansi Offline Level 1
+  - 2.16.360.1.1.1.5.1.2.1: A
+  - 2.16.360.1.1.1.5.1.2.2: A
+  - 2.16.360.1.1.1.5.1.2.3: A
+  - 2.16.360.1.1.1.5.1.3.3: A
+  - 2.16.360.1.1.1.5.1.4.3: A
+  - 2.16.360.1.1.1.5.2.1.1: A
+  - 2.16.360.1.1.1.5.2.1.2: A
+  - 2.16.360.1.1.1.5.2.1.3: A
+  - 2.16.360.1.1.1.5.2.2.1: A
+  - 2.16.360.1.1.1.5.2.2.2: A
+  - 2.16.360.1.1.1.5.2.2.3: A
+  - 2.16.360.1.1.1.8.1: A
+  - 2.16.360.1.1.1.8.1: A
+  - 2.16.360.1.1.1.3.11: A
+  - 2.16.360.1.1.1.3.12: A
+  - 2.16.360.1.1.1.4.1: A
+  - 2.16.360.1.1.1.4.2: A
+  - 2.16.360.1.1.1.4.3: A
+  - 2.16.360.1.1.1.4.4: A
+  - 2.16.360.1.1.1.7.1: A
+  - 2.16.360.1.1.1.7.2: A
 certificate:
   - basic:
     - signature_algorithm:
@@ -76,6 +101,25 @@ certificate:
           - legacy_usage:
             - 2.16.360.1.1.1.7.1
             - 2.16.360.1.1.1.7.2
+        - oid_standard:
+          - minimum_oid:
+            - 2.16.360.1.1.1.5.1.1.1
+            - 2.16.360.1.1.1.5.1.1.2
+            - 2.16.360.1.1.1.5.1.1.3
+            - 2.16.360.1.1.1.5.1.2.1
+            - 2.16.360.1.1.1.5.1.2.2
+            - 2.16.360.1.1.1.5.1.2.3
+            - 2.16.360.1.1.1.5.1.3.3
+            - 2.16.360.1.1.1.5.1.4.3
+            - 2.16.360.1.1.1.5.2.1.1
+            - 2.16.360.1.1.1.5.2.1.2
+            - 2.16.360.1.1.1.5.2.1.3
+            - 2.16.360.1.1.1.5.2.2.1
+            - 2.16.360.1.1.1.5.2.2.2
+            - 2.16.360.1.1.1.5.2.2.3
+            - 2.16.360.1.1.1.8.1
+            - 2.16.360.1.1.1.8.1
+            
     - san:
       - mandatory: 0
       - critical: 0
@@ -85,6 +129,9 @@ certificate:
     - basic_constraint:
       - mandatory: 1
       - critical: 1
+      - value:
+        - ca: false
+        - pathlen: 0
     - name_constraint:
       - mandatory: -1
       - critical: 0
@@ -100,10 +147,3 @@ certificate:
     - aia:
       - mandatory: 1
       - critical: 0
-  
-  
-
-  - basic_constraint_value: 
-    - ca: false
-    - pathlen: 0
-  
